--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "mongodb": "^6.20.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
