--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^6.20.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
